--- a/login.html
+++ b/login.html
@@ -12,29 +12,32 @@
 
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.20.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="public/js/login.js"></script>
+    <script src="public/js/auth.js"></script>
 </head>
     <body>
 
         <div class="content pure-g">
             <div class="pure-u-1 pure-u-md-3-4 pure-u-lg-1-4 login-offset">
-                <form id="login-form" class="pure-form pure-form-stacked login-form">
+                <form id="login-form" class="pure-form pure-form-stacked login-form" autocomplete="off">
                     <fieldset>
+                        <input style="display:none" aria-hidden="true">
+                        <input type="password" style="display:none" aria-hidden="true">
+
                         <label for="login-form-access-key" class="pure-input-label">Access Key</label>
-                        <input id="login-form-access-key" class="pure-input-1" type="text" placeholder="Access Key">
+                        <input id="login-form-access-key" class="pure-input-1" type="text" value="">
 
                         <label for="login-form-access-secret" class="pure-input-label">Access Secret</label>
-                        <input id="login-form-access-secret" class="pure-input-1" type="password" placeholder="Access Secret">
+                        <input id="login-form-access-secret" class="pure-input-1" type="text" value="">
 
                         <label for="login-form-bucket" class="pure-input-label">Bucket</label>
-                        <input id="login-form-bucket" class="pure-input-1" type="text" placeholder="Bucket">
+                        <input id="login-form-bucket" class="pure-input-1" type="text" value="">
 
-                        <label for="remember" class="pure-checkbox pure-input-label">
-                            <input id="login-remember-me" type="checkbox"> Remember me
+                        <label for="login-remember" class="pure-checkbox pure-input-label">
+                            <input id="login-remember" type="checkbox"> Remember
                         </label>
 
                         <p class="help-text">Your access key and secret will be used to generate a federated user. They will be stored in local session storage if selected.</p>
-                        <button type="submit" class="pure-button pure-button-primary login-submit">Login</button>
+                        <button type="submit" class="pure-button pure-button-primary">Login</button>
 
                     </fieldset>
                 </form>
