Add the key as a data attribute on the content textarea

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <div class="content-body">
     <form class="pure-form">
         <fieldset class="pure-group">
-            <textarea id="content" class="pure-input-1" rows="25">{{ content }}</textarea>
+            <textarea id="content" class="pure-input-1" data-key="{{key}}" rows="25">{{content}}</textarea>
         </fieldset>
     </form>
 </div>
