Add a form field for the assets bucket

--- a/login.html
+++ b/login.html
@@ -29,8 +29,11 @@
                         <label for="login-form-access-secret" class="pure-input-label">Access Secret</label>
                         <input id="login-form-access-secret" class="pure-input-1" type="text" value="">
 
-                        <label for="login-form-bucket" class="pure-input-label">Bucket</label>
-                        <input id="login-form-bucket" class="pure-input-1" type="text" value="">
+                        <label for="login-form-data-bucket" class="pure-input-label">Data Bucket</label>
+                        <input id="login-form-data-bucket" class="pure-input-1" type="text" value="">
+
+                        <label for="login-form-assets-bucket" class="pure-input-label">Assets Bucket</label>
+                        <input id="login-form-assets-bucket" class="pure-input-1" type="text" value="">
 
                         <label for="login-remember" class="pure-checkbox pure-input-label">
                             <input id="login-remember" type="checkbox"> Remember
