--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.0.9/themes/default/style.min.css" />
+    <link rel="stylesheet" href="public/css/vendor/jstree.proton.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/github.min.css">
     <link rel="stylesheet" href="public/css/app.css">
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -14,6 +15,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.0.9/jstree.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
+
     <script src="public/js/app.js"></script>
 
     <script type="text/javascript">
@@ -50,7 +54,7 @@
 
 
 <script id="entry-template" type="text/x-handlebars-template">
-    <div class="content-header pure-g">
+    <div class="content-header content-header-div pure-g">
         <div class="pure-u-3-4">
             <h1 class="content-title">{{title}}</h1>
             <p class="content-subtitle">
@@ -59,6 +63,7 @@
         </div>
         <div class="content-controls pure-u-1-4">
             <button id="edit-entry" data-key="{{key}}" class="secondary-button pure-button">Edit</button>
+            <button id="delete-entry" data-key="{{key}}" class="secondary-button pure-button">Delete</button>
         </div>
     </div>
     <div class="content-body">{{&content}}</div>
@@ -67,74 +72,99 @@
 
 
 <script id="new-entry-template" type="text/x-handlebars-template">
-<div class="content-header pure-g">
-    <div class="pure-u-3-4">
-        <h1 class="content-title">New Entry</h1>
+    <div class="content-header pure-g">
+        <div class="pure-u-3-4">
+            <h1 class="content-title">New Entry</h1>
+        </div>
+        <div class="content-controls pure-u-1-4">
+            <button class="secondary-button pure-button">Edit</button>
+        </div>
     </div>
-    <div class="content-controls pure-u-1-4">
-        <button class="secondary-button pure-button">Edit</button>
+    <div class="content-body">
+        <form id="entry-form" class="pure-form pure-form-stacked entry-form">
+            <fieldset>
+                <div class="pure-g">
+
+                    <input id="entry-form-title" class="pure-u-1" type="text" placeholder="Title">
+
+                    <div class="pure-u-1-2">
+                        <select id="edit-entry-form-dir" class="pure-u-23-24">
+                            {{#each dirs}}
+                                <option value="{{this}}" data-dir="{{this}}" {{selected this ../selectedDir}}>{{this}}</option>
+                            {{/each}}
+                        </select>
+                    </div>
+
+                    <input id="entry-form-slug" class="pure-u-1-2" type="text" placeholder="Slug">
+
+                    <div class="pure-u-1">
+                        <button type="button" id="preview-entry" class="button-small pure-button">Preview</button>
+
+                        <label for="upload-image" class="button-small pure-button upload-image">
+                            <i class="fa fa-cloud-upload"></i> Insert Image
+                        </label>
+                        <input id="upload-image" type="file" class="file-upload" />
+                    </div>
+
+                    <div id="content-body-container" class="pure-u-1">
+                        <textarea id="entry-form-content" class="pure-u-1" rows="25"></textarea>
+                    </div>
+
+                    <button type="submit" class="pure-button pure-button-primary">Save</button>
+                </div>
+            </fieldset>
+
+        </form>
     </div>
-</div>
-<div class="content-body">
-    <form id="new-entry-form" class="pure-form">
-        <fieldset>
-
-            <input id="new-entry-form-title" class="pure-input-1" type="text" placeholder="Title">
-
-            <select id="new-entry-form-dir" class="pure-input-1-3">
-                {{#each dirs}}
-                    <option data-dir="{{this}}">{{this}}</option>
-                {{/each}}
-            </select>
-
-            <input id="new-entry-form-slug" class="pure-input-1-3" type="text" placeholder="Slug">
-
-            <button type="button" id="preview-entry" class="button-xsmall pure-button">Extra Small Button</button>
-
-            <textarea id="new-entry-form-content" class="pure-input-1" rows="25"></textarea>
-
-
-            <button type="submit" class="pure-button pure-button-primary">Save</button>
-
-        </fieldset>
-    </form>
-</div>
 </script>  
 
 <script id="edit-entry-template" type="text/x-handlebars-template">
-
-<div class="content-header pure-g">
-    <div class="pure-u-3-4">
-        <h1 class="content-title">Editing {{title}}</h1>
+    <div class="content-header pure-g">
+        <div class="pure-u-3-4">
+            <h1 class="content-title">Editing <span>{{title}}</span></h1>
+        </div>
+        <div class="content-controls pure-u-1-4">
+            <button class="secondary-button pure-button">Close</button>
+            <button class="secondary-button pure-button">Delete</button>
+        </div>
     </div>
-    <div class="content-controls pure-u-1-4">
-        <button class="secondary-button pure-button">Edit</button>
+    <div class="content-body">
+        <form id="entry-form" class="pure-form pure-form-stacked entry-form">
+            <fieldset>
+                <div class="pure-g">
+
+                    <input id="entry-form-title" class="pure-u-1" type="text" placeholder="Title" value="{{title}}">
+
+                    <div class="pure-u-1-2">
+                        <select id="edit-entry-form-dir" class="pure-u-23-24">
+                            {{#each dirs}}
+                                <option data-dir="{{this}}">{{this}}</option>
+                            {{/each}}
+                        </select>
+                    </div>
+
+                    <input id="entry-form-slug" class="pure-u-1-2" type="text" placeholder="Slug" value="{{slug}}">
+
+                    <div class="pure-u-1">
+                        <button type="button" id="preview-entry" class="button-small pure-button">Preview</button>
+                        <label for="upload-image" class="button-small pure-button upload-image">
+                            <i class="fa fa-cloud-upload"></i> Insert Image
+                        </label>
+                        <input id="upload-image" type="file" class="file-upload" />
+                    </div>
+
+                    <div id="content-body-container" class="pure-u-1">
+                        <textarea id="entry-form-content" class="pure-u-1" rows="25">{{content}}</textarea>
+                    </div>
+
+                    <div class="content-footer-controls pure-u-1">
+                        <button type="submit" class="pure-button pure-button-primary">Save</button>
+                    </div>
+                </div>
+            </fieldset>
+
+        </form>
     </div>
-</div>
-<div class="content-body">
-    <form id="edit-entry-form" class="pure-form entry-form">
-        <fieldset>
-            <div class="pure-control-group">
-            <input id="new-entry-form-title" class="pure-input-1" type="text" placeholder="Title" value="{{title}}">
-            </div>
-            <select id="new-entry-form-dir" class="pure-input-1-3">
-                {{#each dirs}}
-                    <option data-dir="{{this}}">{{this}}</option>
-                {{/each}}
-            </select>
-
-            <input id="new-entry-form-slug" class="pure-input-1-3" type="text" placeholder="Slug" value="{{slug}}">
-
-            <button type="button" id="preview-entry" class="button-xsmall pure-button">Extra Small Button</button>
-
-            <textarea id="new-entry-form-content" class="pure-input-1" rows="25">{{content}}</textarea>
-
-
-            <button type="submit" class="pure-button pure-button-primary">Save</button>
-
-        </fieldset>
-    </form>
-</div>
 </script>  
 
 
@@ -152,7 +182,7 @@
                     <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sent</a></li>
                     <li class="pure-menu-item"><a href="#" class="pure-menu-link">Drafts</a></li>
                     <li class="pure-menu-item"><a href="#" class="pure-menu-link">Trash</a></li>
-                    <li class="pure-menu-heading">Labels</li>
+                    <li class="pure-menu-heading">Tags <i class="fa fa-plus-circle"></i></li>
                     <li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="email-label-personal"></span>Personal</a></li>
                     <li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="email-label-work"></span>Work</a></li>
                     <li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="email-label-travel"></span>Travel</a></li>
@@ -163,7 +193,9 @@
 
     <div id="list" class="pure-u-1">
 
-        <div id="tree" class="tree"></div>
+        <div id="tree" class="tree">
+
+        </div>
             
     </div>
 
