--- a/login.html
+++ b/login.html
@@ -18,35 +18,48 @@
 </head>
     <body>
 
-        <div class="content pure-g">
-            <div class="pure-u-1 pure-u-md-3-4 pure-u-lg-1-4 login-offset">
-                <form id="login-form" class="pure-form pure-form-stacked login-form" autocomplete="off">
-                    <fieldset>
-                        <input style="display:none" aria-hidden="true">
-                        <input type="password" style="display:none" aria-hidden="true">
+        <div class="container">
+            <img src="public/img/dodgercms-logo-320.png" />
+            <form id="login-form" class="pure-form pure-form-stacked login-form" autocomplete="off">
+                <fieldset>
+                    <input style="display:none" aria-hidden="true">
+                    <input type="password" style="display:none" aria-hidden="true">
+                    <div class="pure-g">
 
-                        <label for="login-form-access-key" class="pure-input-label">Access Key</label>
-                        <input id="login-form-access-key" class="pure-input-1" type="text" value="">
+                        <div class="pure-u-1">
+                            <label for="login-form-access-key">Access Key</label>
+                            <input id="login-form-access-key" class="pure-u-1" type="text" value="" required>
+                        </div>
 
-                        <label for="login-form-access-secret" class="pure-input-label">Access Secret</label>
-                        <input id="login-form-access-secret" class="pure-input-1" type="text" value="">
+                        <div class="pure-u-1">
+                            <label for="login-form-access-secret">Access Secret</label>
+                            <input id="login-form-access-secret" class="pure-u-1" type="text" value="" required>
+                        </div>
 
-                        <label for="login-form-data-bucket" class="pure-input-label">Data Bucket</label>
-                        <input id="login-form-data-bucket" class="pure-input-1" type="text" value="">
+                        <div class="pure-u-1">
+                            <label for="login-form-data-bucket">Data Bucket</label>
+                            <input id="login-form-data-bucket" class="pure-u-1" type="text" value="" required>
+                        </div>
 
-                        <label for="login-form-assets-bucket" class="pure-input-label">Assets Bucket</label>
-                        <input id="login-form-assets-bucket" class="pure-input-1" type="text" value="">
+                        <div class="pure-u-1">
+                            <label for="login-form-assets-bucket">Assets Bucket</label>
+                            <input id="login-form-assets-bucket" class="pure-u-1" type="text" value="" required>
+                        </div>
 
-                        <label for="login-remember" class="pure-checkbox pure-input-label">
-                            <input id="login-remember" type="checkbox"> Remember
-                        </label>
+                        <div class="pure-u-1">
+                            <label for="login-form-site-bucket">Site Bucket</label>
+                            <input id="login-form-site-bucket" class="pure-u-1" type="text" value="" required>
+                        </div>
 
-                        <p class="help-text">Your access key and secret will be used to generate a federated user. They will be stored in local session storage if selected.</p>
-                        <button type="submit" class="pure-button pure-button-primary pure-input-1">Login</button>
-
-                    </fieldset>
-                </form>
-            </div>
+                        <div class="pure-u-1">
+                            <label for="login-remember" class="pure-checkbox pure-input-label">
+                                <input id="login-remember" type="checkbox"> Remember
+                            </label>
+                        </div>
+                    </div>
+                </fieldset>
+                <button type="submit" class="pure-button pure-button-primary pure-input-1 login-submit">Login</button>
+            </form>
         </div>
     </body>
 
