Update the login page

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <body>
 
         <div class="container">
-            <img src="public/img/dodgercms-logo-320.png" />
+            <img src="public/img/dodgercms-logo.png" class="logo" />
             <form id="login-form" class="pure-form pure-form-stacked login-form" autocomplete="off">
                 <fieldset>
                     <input style="display:none" aria-hidden="true">
