--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
 
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.20.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.js"></script>
 
     <script src="lib/auth.js"></script>
     <script src="public/js/login.js"></script>
