Cleanup the login page

--- a/login.html
+++ b/login.html
@@ -28,28 +28,23 @@
                     <div class="pure-g">
 
                         <div class="pure-u-1">
-                            <label for="login-form-access-key">Access Key</label>
-                            <input id="login-form-access-key" class="pure-u-1" type="text" value="" required>
+                            <input id="login-form-access-key" class="pure-u-1" type="text" placeholder="Access Key" value="" required>
                         </div>
 
                         <div class="pure-u-1">
-                            <label for="login-form-access-secret">Access Secret</label>
-                            <input id="login-form-access-secret" class="pure-u-1" type="text" value="" required>
+                            <input id="login-form-access-secret" class="pure-u-1" type="text" placeholder="Access Secret" value="" required>
                         </div>
 
                         <div class="pure-u-1">
-                            <label for="login-form-data-bucket">Data Bucket</label>
-                            <input id="login-form-data-bucket" class="pure-u-1" type="text" value="" required>
+                            <input id="login-form-data-bucket" class="pure-u-1" type="text" placeholder="Data Bucket" value="" required>
                         </div>
 
                         <div class="pure-u-1">
-                            <label for="login-form-assets-bucket">Assets Bucket</label>
-                            <input id="login-form-assets-bucket" class="pure-u-1" type="text" value="" required>
+                            <input id="login-form-assets-bucket" class="pure-u-1" type="text" placeholder="Assets Bucket" value="" required>
                         </div>
 
                         <div class="pure-u-1">
-                            <label for="login-form-site-bucket">Site Bucket</label>
-                            <input id="login-form-site-bucket" class="pure-u-1" type="text" value="" required>
+                            <input id="login-form-site-bucket" class="pure-u-1" type="text" placeholder="Site Bucket" value="" required>
                         </div>
 
                         <div class="pure-u-1">
@@ -61,6 +56,8 @@
                 </fieldset>
                 <button type="submit" class="pure-button pure-button-primary pure-input-1 login-submit">Login</button>
             </form>
+
+            <p><strong>Help:</strong> <a href="http://dodgercms.com/help/installation">Where I do get this information from?</a></p>
         </div>
     </body>
 
