--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.20.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.js"></script>
+    <script src="public/js/vendor/jquery.blockUI.min.js"></script>
 
     <script src="lib/auth.js"></script>
     <script src="public/js/login.js"></script>
@@ -57,7 +58,7 @@
                 <button type="submit" class="pure-button pure-button-primary pure-input-1 login-submit">Login</button>
             </form>
 
-            <p><strong>Help:</strong> <a href="http://dodgercms.com/help/installation">Where I do get this information from?</a></p>
+            <p><strong>Help:</strong> <a href="http://dodgercms.com/help/installation" target="_blank">Where I do get this information from?</a></p>
         </div>
     </body>
 
