--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         </div>
         <div class="content-controls pure-u-1-4">
             <button id="close-entry" class="secondary-button pure-button">Close</button>
-            <button id="delete-entry" data-key="{{key}}" class="secondary-button pure-button">Delete</button>
+            {{#title}}
+                <button id="delete-entry" data-key="{{key}}" class="secondary-button pure-button">Delete</button>
+            {{/title}}
         </div>
     </div>
     <div class="content-body">
