Update the toolbar style

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                     <input id="entry-form-slug" class="pure-u-1-2" type="text" placeholder="Slug" data-entry-form-slug="{{slug}}" value="{{slug}}" required>
 
                     <div class="pure-u-1">
-                        <button type="button" id="preview-entry" class="toolbar-button pure-button">Preview</button>
-                        <label for="upload-image" class="button-small pure-button upload-image">
-                            <i class="fa fa-cloud-upload"></i> Insert Image
-                        </label>
-                        <input id="upload-image" type="file" class="file-upload" />
+                        <div class="toolbar">
+                            <button type="button" id="preview-entry" class="button-small pure-button" title="Preview"><i class="fa fa-search"></i></button>
+                            <label for="upload-image" class="button-small pure-button upload-image" title="Upload Image"><i class="fa fa-cloud-upload"></i></label>
+                            <input id="upload-image" type="file" class="file-upload" />
+                        </div>
                     </div>
 
                     <div id="content-body-container" class="pure-u-1">
