--- a/login.html
+++ b/login.html
@@ -3,12 +3,22 @@
 <html>
 <head>
     <title>DodgerCMS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 
     <link rel="stylesheet" href="public/css/login.css">
+
+    <link rel="shortcut icon" href="public/img/icons/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="57x57" href="public/img/icons/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="public/img/icons/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="public/img/icons/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="public/img/icons/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="public/img/icons/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="public/img/icons/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="public/img/icons/apple-touch-icon-152x152.png" />
 
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.20.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -57,7 +67,7 @@
                 <button type="submit" class="pure-button pure-button-primary pure-input-1 login-submit">Login</button>
             </form>
 
-            <p><strong>Help:</strong> <a href="http://dodgercms.com/help/installation" target="_blank">Where I do get this information from?</a></p>
+            <p class="help"><i class="fa fa-question-circle"></i> Help: <a href="http://dodgercms.com/help/installation" target="_blank">Where I do get this information from?</a></p>
         </div>
     </body>
 </html>
