Work on front end style

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
 
                     <div id="content-body-container" class="pure-u-1">
-                        <textarea id="entry-form-content" class="pure-u-1" rows="25">{{content}}</textarea>
+                        <textarea id="entry-form-content" class="pure-u-1 content-textarea" rows="25">{{content}}</textarea>
                     </div>
 
                     <div class="content-footer-controls pure-u-1">
